# poetry-template

./: Justfile  README.md  main.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  super_linter.yml
src/notebooks/: Untitled.ipynb
src/poetry_template/: main.py
tests/: test_app.py
