[tool.poetry]
name = "poetry-template"
version = "0.1.0"
description = ""
authors = ["Akagi201 <akagi201@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry_template", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0.2"
pytest = "^8.3.4"
jupyterlab = {version = "^4.3.5", optional = true}
loguru = "^0.7.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.6"
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
