[project]
name = "uv-template"
version = "0.1.0"
description = "uv template"
authors = [
    { name = "Bob Liu", email = "akagi201@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "pytest>=8.3.4",
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.9.6",
]

[project.scripts]
main = "uv_template.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"